# myshell

./: CMakeLists.txt  README.md  main.cpp
external_programs/: external.cpp  external.h
external_programs/mycat/: CMakeLists.txt  CommandLineArgs.cpp  CommandLineArgs.h  Productivity comparison.ipynb  Readme.md  filtering.cpp  fitering.h  io.cpp  io.h  io_string.cpp  io_string.h  mycat.cpp  path_trainsform.cpp  path_transform.h
external_programs/myls/: CMakeLists.txt  main.cpp
external_programs/myls/config/: config.cpp  config.h
external_programs/myls/filesystem_classes/: Entry.cpp  Entry.h  filesystem.cpp  filesystem.h
external_programs/myls/outputter/: Outputter.cpp  Outputter.h  filename_formats.cpp  filename_formats.h  output.cpp  output.h  sorters.cpp  sorters.h  split_into_groups.cpp  split_into_groups.h
helpers/execution/: execution.cpp  execution.h
helpers/filesystem/: filesystem.cpp  filesystem.h
helpers/io/: console_io.cpp  console_io.h
helpers/my_errno_values/: my_errno.cpp  my_errno.h
helpers/parsing/: helpers.cpp  helpers.h  parsing.cpp  parsing.h  wildcard.cpp  wildcard.h
helpers/pipe/: pipe.cpp  pipe.h
helpers/redirection/: Redirector.cpp  Redirector.h  redirection.cpp  redirection.h
helpers/variables/: variables.cpp  variables.h
internal_programs/mcd/: mcd.cpp  mcd.h
internal_programs/mecho/: mecho.cpp  mecho.h
internal_programs/merrno/: merrno.cpp  merrno.h
internal_programs/mexit/: mexit.cpp  mexit.h
internal_programs/mexport/: mexport.cpp  mexport.h
internal_programs/mpwd/: mpwd.cpp  mpwd.h
